	package v62;
	option java_package = "nirvana.hall.protocol.v62";

	option java_outer_classname = "FPTProto";

	message	FPTData
	{
		//头信息
		required FPTHead		head = 1;
		//十指指纹
		repeated FPTTPCard		tpcard = 2;
		//现场指纹
		repeated FPTCaseLPCard	case = 3;
 		//比中信息
 		repeated FPTHitLog		hitlog = 4;

 		//保留
		//查询 * 2，候选列表 * 5
	}
  
	message	FPTTPCard
	{
		required TPCard	tpcard = 1;
	}
  
	message	FPTCaseLPCard
	{
		required Case	case = 1;
		repeated LPCard	lpcard = 2;
	}
  
	//比中类型
	enum HitType
	{
		HIT_UNDET	= 0;	//不确定
		HIT_TLLT	= 1;
		HIT_TT		= 2;
		HIT_LL		= 3;
	}
	
	message	FPTHitLog
	{
		required HitType	type = 1;
		optional TLLTHitLog	tlorlt = 2;
		optional TTHitLog	tt = 3;
		optional LLHitLog	ll = 4;
	}
	
	message	FPTHead
	{
		optional int32	nVerSionID = 1;
		optional string	strSendTime = 2;
		optional string	strRecvUnitCode = 3;
		optional string	strSendUnitCode = 4;
		optional string	strSendUnitName = 5;
		optional string	strSender = 6;
		optional string	strSendUnitType = 7;
		optional string	strTaskControlCode = 8;
		optional string	strComment = 9;
	}
	
	//纹型
	enum PatternType
	{
		PATTERN_UNDET		= 0;	//不确定
		PATTERN_ARCH		= 1;	//弓型
		PATTERN_LEFTLOOP	= 2;	//左箕
		PATTERN_RIGHTLOOP	= 3;	//右箕
		PATTERN_WHORL		= 4;	//斗
    
	}
	
	//指位
	enum	FingerFgp
	{
		FINGER_UNDET	= 0;	//不确定
		FINGER_R_THUMB	= 1;	//右拇
		FINGER_R_INDEX	= 2;	//右食
		FINGER_R_MIDDLE	= 3;	//右中
		FINGER_R_RING	= 4;	//右环
		FINGER_R_LITTLE	= 5;	//右小
		FINGER_L_THUMB	= 6;	//左姆
		FINGER_L_INDEX	= 7;	//左食
		FINGER_L_MIDDLE	= 8;	//左中
		FINGER_L_RING	= 9;	//左环
		FINGER_L_LITTLE	= 10;	//左小
	}

	//掌位	//当前FPT4.0不支持掌纹
	//enum	PalmFgp
	//{
	//}
	
	//脸位
	enum	FaceFgp
	{
		FACE_UNKNOWN	= 0;	// 未知
		FACE_FRONT		= 1;	// 脸部正面像
		FACE_LEFT		= 2;	// 脸部左侧像
		FACE_RIGHT		= 3;	// 脸部右侧像
	};
	
	//类型
	enum	ImageType
	{
		IMAGETYPE_UNKNOWN	= 0;	//不确定
		IMAGETYPE_FINGER	= 1;	//指纹
		IMAGETYPE_PALM		= 2;	//掌纹
		IMAGETYPE_FACE		= 3;	//人像
		IMAGETYPE_CARDIMG	= 4;	//文字框
		IMAGETYPE_VOICE		= 5;	//声纹
	
	}

	message	TPCard
	{
		message	TPCardText
		{
			optional string	strName = 1;
			optional string	strAliasName = 2;
			optional int32	nSex = 3;
			optional string	strBirthDate = 4;
			optional string	strIdentityNum = 5;
			optional string	strBirthAddrCode = 6;
			optional string	strBirthAddr = 7;
			optional string	strAddrCode = 8;
			optional string	strAddr = 9;
			optional string	strPersonType = 10;
			optional string	strCaseType1 = 11;
			optional string	strCaseType2 = 12;
			optional string	strCaseType3 = 13;
			optional string	strPrintUnitCode = 14;
			optional string	strPrintUnitName = 15;
			optional string	strPrinter = 16;
			optional string	strPrintDate = 17;
			optional string	strComment = 18;

			//追加4.0文字信息
			optional string	strNation = 19;
			optional string	strRace = 20;
			optional string	strCertifType = 21;				//证件类型
			optional string	strCertifID = 22;				//证件号
			optional bool	bHasCriminalRecord = 23;		//前科标记
			optional string	strCriminalRecordDesc = 24;		//前科信息
			//optional string	strPersonID;				//人员编号	不在此处，移到TPCard.strPersonID
			optional string	strPremium = 25;				//奖金
			optional int32	nXieChaFlag = 26;				//协查标识
			optional string	strXieChaRequestUnitName = 27;	//协查请求单位代码
			optional string	strXieChaRequestUnitCode = 28;	//协查请求单位名称
			optional int32	nXieChaLevel = 29;				//协查级别
			optional string	strXieChaForWhat = 30;			//协查目的
			optional string	strRelPersonNo = 31;			//关联人员编号
			optional string	strRelCaseNo = 32;				//关联案件编号
			optional string	strXieChaTimeLimit = 33;		//协查有效时限：1. 一个月	2. 三个月	3 六个月	4 长期
			optional string	strXieChaDate = 34;				//协查请求日期
			optional string	strXieChaRequestComment = 35;	//协查请求说明
			optional string	strXieChaContacter = 36;		//联系人
			optional string	strXieChaTelNo = 37;			//联系电话
			optional string	strShenPiBy = 38;				//审批人

		}
		
		message	TPCardBlob
		{
			optional string			stImage = 1;
			optional string			stMnt = 2;
			optional PatternType	rp = 3 [default = PATTERN_UNDET];		//主纹型
			optional PatternType	vrp = 4 [default = PATTERN_UNDET];		//副纹型
			optional FingerFgp		fgp = 5 [default = FINGER_UNDET];		//指位
			required ImageType		type = 6 [default = IMAGETYPE_UNKNOWN];
			optional bool			bPlain = 7;
			optional string			strMntExtractMethod = 8;				//GAFIS结构中无
			optional FaceFgp		facefgp = 9 [default = FACE_UNKNOWN];	//脸位
			//optional PalmFgp		palmfgp = 10;							//目前不支持掌纹
		}
		
		required string		strCardID = 1;
		optional string		strPersonID = 2;
		optional TPCardText	text = 3;
		repeated TPCardBlob	blob = 4;
	}
	
	message	Case
	{
		message	CaseText
		{
			optional string	strCaseType1 = 1;
			optional string	strCaseType2 = 2;
			optional string	strCaseType3 = 3;
			optional string	strSuspArea1Code = 4;
			optional string	strSuspArea2Code = 5;
			optional string	strSuspArea3Code = 6;
			optional string	strCaseOccurDate = 7;
			optional string	strCaseOccurPlaceCode = 8;
			optional string	strCaseOccurPlace = 9;
			optional int32	nSuperviseLevel = 10;
			optional string	strExtractUnitCode = 11;
			optional string	strExtractUnitName = 12;
			optional string	strExtractor = 13;
			optional string	strExtractDate = 14;
			optional string	strMoneyLost = 15;
			optional string	strPremium = 16;
			optional bool	bPersonKilled = 17;
			optional string	strComment = 18;
			optional int32	nCaseState = 19;
			optional int32	nXieChaState = 20;
			optional int32	nCancelFlag = 21;
			optional string	strXieChaDate = 22;
			optional string	strXieChaRequestUnitName = 23;
			optional string	strXieChaRequestUnitCode = 24;
		}
		
		required string	strCaseID = 1;
		repeated string	strFingerID = 2;
		repeated string	strPalmID = 3;
		optional int32	nCaseFingerCount = 4;	//GAFIS结构中无
		optional int32	nSendFingerCount = 5;	//GAFIS结构中无

		optional CaseText	text = 6;
	}
	
	message	LPCard
	{
		message	LPCardText
		{
			optional string	strSeq = 1;
			optional string	strRemainPlace = 2;
			optional string	strRidgeColor = 3;
			optional bool	bDeadBody = 4;
			optional string	strDeadPersonNo = 5;
			optional int32	nXieChaState = 6;
			optional int32	nBiDuiState = 7;
			optional string	strStart = 8;
			optional string	strEnd = 9;
		}
		
		message	LPCardBlob
		{
			optional string			stImage = 1;
			optional string			stMnt = 2;
			repeated PatternType	rp = 3;			//候选纹型
			repeated FingerFgp		fgp = 4;		//候选指位
			required ImageType		type = 5;
			optional string			strMntExtractMethod = 6;	//"A" 自动提取	"U"	需要人工编辑	"E"	自动提取但经过人工编辑	"M"	人工提取//GAFIS结构中无
		}
		
		required string		strCardID = 1;
		optional LPCardText	text = 2;
		optional LPCardBlob	blob = 3;
	}
	
	message	TLLTHitLog
	{
		optional string	strCaseNo = 1;
		optional int32	nLatFingerSeq = 2;
		optional string	strPersonNo = 3;
		optional int32	nTPFingerPos = 4;
		optional bool	bCaughtDirectly = 5;
		optional int32	nBiDuiMethod = 6;
		optional string	strBiDuiUnitCode = 7;
		optional string	strBiDuiUnitName = 8;
		optional string	strBiDuiUser = 9;
		optional string	strBiDuiDate = 10;
		optional string	strComment = 11;
		optional string	strReporter = 12;
		optional string	strReportDate = 13;
		optional string	strShenPiBy = 14;
		optional string	strShenPiDate = 15;
		optional string	strReportUnitCode = 16;
		optional string	strReportUnitName = 17;
		optional string	strRechecker = 18;
		optional string	strRecheckUnitCode = 19;
		optional string	strRecheckDate = 20;
	}
	
	message	TTHitLog
	{
		optional string	strPersonNo1 = 1;
		optional string	strPersonNo2 = 2;
		optional string	strBiDuiUnitCode = 3;
		optional string	strBiDuiUnitName = 4;
		optional string	strBiDuiUser = 5;
		optional string	strBiDuiDate = 6;
		optional string	strComment = 7;
		optional string	strReporter = 8;
		optional string	strReportDate = 9;
		optional string	strShenPiBy = 10;
		optional string	strShenPiDate = 11;
		optional string	strReportUnitCode = 12;
		optional string	strReportUnitName = 13;
		optional string	strRechecker = 14;
		optional string	strRecheckUnitCode = 15;
		optional string	strRecheckDate = 16;
	}
	
	message	LLHitLog
	{
		optional string	strCaseNo1 = 1;
		optional string	strCaseNo2 = 2;
		optional int32	nLatFingerSeq1 = 3;
		optional int32	nLatFingerSeq2 = 4;
		optional string	strBiDuiUnitCode = 5;
		optional string	strBiDuiUnitName = 6;
		optional string	strBiDuiUser = 7;
		optional string	strBiDuiDate = 8;
		optional string	strComment = 9;
		optional string	strReporter = 10;
		optional string	strReportDate = 11;
		optional string	strShenPiBy = 12;
		optional string	strShenPiDate = 13;
		optional string	strReportUnitCode = 14;
		optional string	strReportUnitName = 15;
		optional string	strRechecker = 16;
		optional string	strRecheckUnitCode = 17;
		optional string	strRecheckDate = 18;
	}
  
